vcs/specs/parser/fail/types/unit_with_content.vr
// @test: parse-fail
// @level: L0
// @tags: parser, types, unit, content, error
// @description: Test detection of unit type with content inside
// @expected-error: E018

// Unit type () must be empty
fn test(x: (,)) {}
